@@ -557,14 +557,6 @@ class TestCaseInTempDir(TestCase):
         self.assertEqualDiff(content, open(path, 'r').read())
         
 
-class MetaTestLog(TestCase):
-    def test_logging(self):
-        """Test logs are captured when a test fails."""
-        self.log('a test message')
-        self._log_file.flush()
-        self.assertContainsRe(self._get_log(), 'a test message\n')
-
-
 def filter_suite_by_re(suite, pattern):
     result = TestUtil.TestSuite()
     filter_re = re.compile(pattern)
@@ -612,11 +604,7 @@ def test_suite():
 
     global MODULES_TO_DOCTEST
 
-    # FIXME: If these fail to load, e.g. because of a syntax error, the
-    # exception is hidden by unittest.  Sucks.  Should either fix that or
-    # perhaps import them and pass them to unittest as modules.
-    testmod_names = \
-                  ['bzrlib.tests.MetaTestLog',
+    testmod_names = [ \
                    'bzrlib.tests.test_api',
                    'bzrlib.tests.test_gpg',
                    'bzrlib.tests.test_identitymap',
@@ -665,17 +653,25 @@ def test_suite():
                    'bzrlib.tests.test_tsort',
                    'bzrlib.tests.test_trace',
                    'bzrlib.tests.test_rio',
+                   'bzrlib.tests.test_selftest',
                    ]
 
-    TestCase.BZRPATH = os.path.join(os.path.realpath(os.path.dirname(bzrlib.__path__[0])), 'bzr')
-    print '%-30s %s' % ('bzr binary', TestCase.BZRPATH)
+    print '%10s: %s' % ('bzr', os.path.realpath(sys.argv[0]))
+    print '%10s: %s' % ('bzrlib', bzrlib.__path__[0])
     print
     suite = TestSuite()
-    suite.addTest(TestLoader().loadTestsFromNames(testmod_names))
+    # python2.4's TestLoader.loadTestsFromNames gives very poor 
+    # errors if it fails to load a named module - no indication of what's
+    # actually wrong, just "no such module".  We should probably override that
+    # class, but for the moment just load them ourselves. (mbp 20051202)
+    loader = TestLoader()
+    for mod_name in testmod_names:
+        mod = _load_module_by_name(mod_name)
+        suite.addTest(loader.loadTestsFromModule(mod))
     for package in packages_to_test():
         suite.addTest(package.test_suite())
     for m in MODULES_TO_TEST:
-        suite.addTest(TestLoader().loadTestsFromModule(m))
+        suite.addTest(loader.loadTestsFromModule(m))
     for m in (MODULES_TO_DOCTEST):
         suite.addTest(DocTestSuite(m))
     for p in bzrlib.plugin.all_plugins:
@@ -683,3 +679,13 @@ def test_suite():
             suite.addTest(p.test_suite())
     return suite
 
+
+def _load_module_by_name(mod_name):
+    parts = mod_name.split('.')
+    module = __import__(mod_name)
+    del parts[0]
+    # for historical reasons python returns the top-level module even though
+    # it loads the submodule; we need to walk down to get the one we want.
+    while parts:
+        module = getattr(module, parts.pop(0))
+    return module
